--- a/style.css
+++ b/style.css
@@ -3,5 +3,4 @@ body {
   padding: 0;
   overflow: hidden;
   cursor: default;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
+  -webkit-tap-highlight-color: transparent; }
